Style fixes.